force-app/main/default/objects/Envelope_Place_Template__c/Envelope_Place_Template__c.object-meta.xml
<CustomObject>
    <label>Envelope Place Template</label>
    <pluralLabel>Envelope Place Templates</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Envelope Place Template</label>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>