force-app/main/default/objects/Envelope_Place_Template__c/fields/Capture_As__c.field-meta.xml
<CustomField>
    <fullName>Capture_As__c</fullName>
    <label>Capture As</label>
    <length>32</length>
    <type>Text</type>
    <inlineHelpText>A user-defined identifier used to store the value entered by the recipient. Must start with a lowercase letter and contain only lowercase letters, numbers, or underscores.</inlineHelpText>
</CustomField>