force-app/main/default/objects/Envelope_Place_Template__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <label>Place Height</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>