force-app/main/default/objects/Envelope_Place_Template__c/fields/Place_Key__c.field-meta.xml
<CustomField>
    <fullName>Place_Key__c</fullName>
    <label>Place Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>