force-app/main/default/objects/Envelope_Place_Template__c/fields/Recipient_Key__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Key__c</fullName>
    <label>Recipient Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>