force-app/main/default/objects/Envelope_Place_Template__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <inlineHelpText>Sort order of the place template.</inlineHelpText>
</CustomField>