force-app/main/default/objects/Envelope_Place_Template__c/fields/Symbol__c.field-meta.xml
<CustomField>
    <fullName>Symbol__c</fullName>
    <label>Symbol</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>check</fullName>
                <label>Check</label>
            </value>
            <value>
                <fullName>xmark</fullName>
                <label>X Mark</label>
            </value>
        </valueSetDefinition>
    </valueSet>
    <inlineHelpText>Used for checkbox fields to define X or Checkmark in the box.</inlineHelpText>
</CustomField>