force-app/main/default/objects/Envelope_Place_Template__c/validationRules/Date_Format_Invalid_For_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Format_Invalid_For_Type</fullName>
    <active>true</active>
    <description>Ensures Date Format is only set for date types.</description>
    <errorConditionFormula>AND(
        NOT(ISPICKVAL(Date_Format__c, &apos;&apos;)),
        NOT(ISPICKVAL(Place_Type__c, &apos;envelope_completed_date&apos;))
    )</errorConditionFormula>
    <errorDisplayField>Date_Format__c</errorDisplayField>
    <errorMessage>Date Format can only be set for Envelope Completed Date place types.</errorMessage>
</ValidationRule>