force-app/main/default/objects/Envelope_Place_Template__c/validationRules/Font_Size_Invalid_For_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Font_Size_Invalid_For_Type</fullName>
    <active>true</active>
    <description>Ensures Font Size is only set for text_input types.</description>
    <errorConditionFormula>AND(
            NOT(ISBLANK(Font_Size__c)),
            TEXT(Place_Type__c) = &apos;text_input&apos;
        )</errorConditionFormula>
    <errorDisplayField>Font_Size__c</errorDisplayField>
    <errorMessage>Font Size can only be set for Text Input place types.</errorMessage>
</ValidationRule>