force-app/main/default/objects/Envelope_Place_Template__c/validationRules/Format_Invalid_For_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Format_Invalid_For_Type</fullName>
    <active>true</active>
    <description>Ensures Format is only set for text_input types.</description>
    <errorConditionFormula>AND(
            NOT(ISBLANK(Format__c)),
            TEXT(Place_Type__c) = &apos;text_input&apos;
        )</errorConditionFormula>
    <errorDisplayField>Format__c</errorDisplayField>
    <errorMessage>Format can only be set for Text Input place types.</errorMessage>
</ValidationRule>