force-app/main/default/objects/Envelope_Place_Template__c/validationRules/Height_Invalid_For_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Height_Invalid_For_Type</fullName>
    <active>true</active>
    <description>Ensures Height is only set for signature, initials, or checkbox place types.</description>
    <errorConditionFormula>AND(
                NOT(ISBLANK(Height__c)),
                NOT(
                    OR(
                        TEXT(Place_Type__c) = &apos;signature&apos;,
                        TEXT(Place_Type__c) = &apos;initials&apos;,
                        TEXT(Place_Type__c) = &apos;checkbox&apos;
                    )
                 )
            )</errorConditionFormula>
    <errorDisplayField>Height__c</errorDisplayField>
    <errorMessage>Height can only be set for Signature, Initials, or Checkbox place types.</errorMessage>
</ValidationRule>