force-app/main/default/objects/Envelope_Place_Template__c/validationRules/Prompt_Invalid_For_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Prompt_Invalid_For_Type</fullName>
    <active>true</active>
    <description>Ensures Prompt is only set for text_input place types.</description>
    <errorConditionFormula>AND(
            NOT(ISBLANK(Prompt__c)),
            TEXT(Place_Type__c) = &apos;text_input&apos;
        )</errorConditionFormula>
    <errorDisplayField>Prompt__c</errorDisplayField>
    <errorMessage>Prompt can only be set for Text Input place types.</errorMessage>
</ValidationRule>