force-app/main/default/objects/Envelope_Place_Template__c/validationRules/Width_Invalid_For_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Width_Invalid_For_Type</fullName>
    <active>true</active>
    <description>Ensures Width is only set for text_input types.</description>
    <errorConditionFormula>AND(
            NOT(ISBLANK(Width__c)),
            TEXT(Place_Type__c) = &apos;text_input&apos;
        )</errorConditionFormula>
    <errorDisplayField>Width__c</errorDisplayField>
    <errorMessage>Width can only be set for Text Input place types.</errorMessage>
</ValidationRule>